Se suma manejo de pedidos y algunos fixes